# commotion-service-manager

./: .gitignore  CMakeLists.txt  Doxyfile.cfg  INSTALL.md  Makefile  README.md  TODO  browse.c  browse.h  cmd.c  cmd.h  commotion-service-manager.c  commotion-service-manager.h  concat.c  config.h.in  core-browse-services.c  daemon.c  debug.h  defs.h  internal.h  main.c  publish.c  publish.h  schema.c  schema.h  service.c  service.h  service.schema  service_list.c  service_list.h  sid.mk  test.cpp  test.h  uci-utils.c  uci-utils.h  util.c  util.h
debian/: changelog  commotion-service-manager.default  control  copyright  init.d  install  postinst  rules
files/schemas.d/: 2.0.schema
lua/: CMakeLists.txt  csm.lua  csm_lua.c  test.lua
openwrt/: Makefile
openwrt/etc/init.d/: commotion-service-manager
openwrt/etc/uci-defaults/: CSMv2-upgrade  CSMv2-upgrade.lua
python/: CommotionService.py  test.py
python/commotion/: __init__.py  csm.py  prototypes.py
src/: CMakeLists.txt  Makefile  browse.c  browse.h  cmd.c  cmd.h  commotion-service-manager.c  commotion-service-manager.h  concat.h  config.h.in  core-browse-services.c  daemon.c  defs.h  escape.c  escape.h  publish.c  publish.h  schema.c  schema.h  service.c  service.h  service_list.c  service_list.h  uci-utils.c  uci-utils.h  util.c  util.h
