SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lua)

SET(LIBSRC csm_lua.c)

SET(LIBLIBS lua50 commotion-service-manager)

ADD_LIBRARY(lua_library SHARED ${LIBSRC})

TARGET_LINK_LIBRARIES(lua_library ${LIBLIBS})

SET_TARGET_PROPERTIES(lua_library PROPERTIES OUTPUT_NAME csm_lua)

INSTALL(TARGETS lua_library DESTINATION lib)