SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lua)

SET(LIBSRC csm_lua.c)

LINK_DIRECTORIES(${CMAKE_BINARY_DIR})

SET(LIBLIBS lua commotion-service-manager)

IF(NOT OPENWRT)
  INCLUDE_DIRECTORIES("/usr/include/lua5.1")
ENDIF()

ADD_LIBRARY(lua_library SHARED ${LIBSRC})

TARGET_LINK_LIBRARIES(lua_library ${LIBLIBS})

SET_TARGET_PROPERTIES(lua_library PROPERTIES OUTPUT_NAME csm_lua)

INSTALL(TARGETS lua_library DESTINATION lib)